fix(ui5-button): align end icon padding (#12908)v
Before:
Screenshot 2026-01-14 at 16 41 19

After:
image

fixes: #12803

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -385,6 +385,7 @@ bdi {
 	justify-content: center;
 }
 
-:host([has-end-icon]:not([icon])) .ui5-button-end-icon {
-	margin-left: auto;
+:host([has-end-icon]:not([icon]):not(:empty)) .ui5-button-end-icon {
+	padding-inline-start: var(--_ui5_button_base_icon_margin);
+	margin-inline-start: auto;
 }
